--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Carousel Page</title>
-  
+
   <!-- CSS lõi Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,10 +18,10 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Carousel</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarcollage"
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarcollage"
           aria-controls="navbarCollaapse" aria-expanded="false" aria-label="toggle navigation">
           <span class="varbar-toggeler-icon"></span>
-        </button>
+        </button> -->
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -30,14 +31,13 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disable</a>
+            <li class="nav-item"><a class="nav-link disabled" href="#">Disable</a>
             </li>
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-
         </div>
       </div>
     </nav>
@@ -71,32 +71,31 @@
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 
     <div class="carousel-inner">
-
       <div class="carousel-item active">
         <img class="bg-img1" src="aa.jpg">
-          <div class="carousel-caption text-start">
-            <h1>Examle headline</h1>
-            <p>Some representative placeholder content for the first slide of the carousel</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-          </div>
+        <div class="carousel-caption text-start">
+          <h1>Examle headline</h1>
+          <p>Some representative placeholder content for the first slide of the carousel</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+        </div>
       </div>
 
       <div class="carousel-item bg-img2">
         <img class="bg-img2" src="bb.jpg">
-          <div class="carousel-caption">
-            <h1>Another Examle headline</h1>
-            <p>Some representative placeholder content for the first slide of the carousel</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-          </div>
+        <div class="carousel-caption">
+          <h1>Another Examle headline</h1>
+          <p>Some representative placeholder content for the first slide of the carousel</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+        </div>
       </div>
 
       <div class="carousel-item bg-img3">
         <img class="bg-img3" src="cc.jpg">
-          <div class="carousel-caption text-end">
-            <h1>One more Another Examle headline</h1>
-            <p>Some representative placeholder content for the first slide of the carousel</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-          </div>
+        <div class="carousel-caption text-end">
+          <h1>One more Another Examle headline</h1>
+          <p>Some representative placeholder content for the first slide of the carousel</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+        </div>
       </div>
 
     </div>
@@ -122,7 +121,9 @@
 
   </div>
   <!-- Gói JavaScript với Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
