--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
 </head>
 
 <body>
-
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-light bg-light navbar-expand-md">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Carousel</a>
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarcollage"
-          aria-controls="navbarCollaapse" aria-expanded="false" aria-label="toggle navigation">
-          <span class="varbar-toggeler-icon"></span>
-        </button> -->
-
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -31,83 +25,49 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item"><a class="nav-link disabled" href="#">Disable</a>
+            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disable</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Seach">
+          <button class="btn btn-outline-success">Seach</button>
+        </form>
       </div>
     </nav>
   </header>
-
-  <!--<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div id="myCarousel" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active bg-img1">
-        <h1 style="color: red">Examle headline</h1>
-          <p>Some representative placeholder content for the first slide of the carousel</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-    </div>
-      <div class="carousel-item active">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-  
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-  
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> -->
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
         <img class="bg-img1" src="aa.jpg">
         <div class="carousel-caption text-start">
           <h1>Examle headline</h1>
           <p>Some representative placeholder content for the first slide of the carousel</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+          <p><a class=" btn btn-lg btn-primary" href="#">Sign up today</a></p>
         </div>
       </div>
-
       <div class="carousel-item bg-img2">
-        <img class="bg-img2" src="bb.jpg">
+        <img class="bg-img1" src="bb.jpg">
         <div class="carousel-caption">
-          <h1>Another Examle headline</h1>
+          <h1>Examle headline</h1>
           <p>Some representative placeholder content for the first slide of the carousel</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+          <p><a class=" btn btn-lg btn-primary" href="#">Learn more</a></p>
         </div>
       </div>
-
       <div class="carousel-item bg-img3">
-        <img class="bg-img3" src="cc.jpg">
+        <img class="bg-img1" src="cc.jpg">
         <div class="carousel-caption text-end">
-          <h1>One more Another Examle headline</h1>
+          <h1>Examle headline</h1>
           <p>Some representative placeholder content for the first slide of the carousel</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+          <p><a class=" btn btn-lg btn-primary" href="#">Learn more</a></p>
         </div>
       </div>
-
     </div>
 
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"
-        aria-current="true">
-      </button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="">
-      </button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="">
-      </button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
     </div>
 
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -115,15 +75,13 @@
       <span class=" visual-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+      <span class="carousel-control-next-icon" aria-hidden="">true</span>
+      <span class=" visual-hidden">Next</span>
     </button>
 
-  </div>
-  <!-- Gói JavaScript với Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
